tried to fix the jumping issue on mobile with javascript but haven't gotten it down yet.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,6 +107,11 @@ select {
 /**************************************
 GLOBAL
 ***************************************/
+:root {
+	--height-body: 100%;
+	--height-about: 100%;
+	--height-element: 100%;
+}
 
 html {
 	font-family: 'Open Sans', sans-serif;
@@ -116,13 +121,21 @@ html {
 	position: relative;
 }
 
-	html:before {
+body {
+	width: 100%;
+	margin: 0 auto;
+}
+
+	body:before {
 		background: url("../images/bricks.jpg") left top/cover no-repeat fixed;
-		content: '';
+		-webkit-background-size: cover;
+    	-moz-background-size: cover;
+    	-o-background-size: cover;
+    	content: '';
 		max-width: 100%;
 		min-width: 100%;
-		max-height: 100%;
-		min-height: 100%;
+		max-height: var(--height-body);
+		min-height: var(--height-body);
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -130,14 +143,10 @@ html {
 		z-index: -1;
 	}
 
-body {
-	width: 100%;
-	margin: 0 auto;
-}
-
 p {
 	font-family: 'Lato';
 }
+
 a {
 	text-decoration: none;
 	color: #25ced1;
@@ -270,8 +279,11 @@ ABOUT ME
 	.about:before {
 		content: '';
 		background: url("../images/mania.png") left top/cover no-repeat fixed;
+		-webkit-background-size: cover;
+    	-moz-background-size: cover;
+    	-o-background-size: cover;
 		width: 100%;
-		height: 100%;
+		height: var(--height-about);
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -339,17 +351,18 @@ PORTFOLIO
 	padding: 250px 0;
 	position: relative;
 }
-	.example:first-child:before, 
-	.example:nth-child(2):before, .example:nth-last-child(2):before, .example:last-child:before {
-		content: '';
+	.example:before {
+		-webkit-background-size: cover;
+    	-moz-background-size: cover;
+    	-o-background-size: cover;
+    	content: '';
 		width: 100%;
-		height: 100%;
+		height: var(--height-element);
 		position: absolute;
 		top: 0;
 		left: 0;
 		opacity: .15;
 		z-index: -1;
-
 	}
 
 	.example:first-child:before {
